load("@rules_spring//springboot:springboot.bzl", "springboot")

java_library(
    name = "all_java",
    srcs = glob(["**/*.java"]),
    deps = [
        "@rules_spring//springboot/import_bundles:springboot_required_deps",
        "@maven//:com_google_guava_guava",
        # "@maven//:org_springframework_boot_spring_boot_loader_tools",
        # "@maven//:org_springframework_boot_spring_boot_starter_jetty",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_webmvc",
    ],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "BankApp",
    srcs = [],
    main_class = "com.handelsbanken.testapp.Main",
    runtime_deps = ["//com/handelsbanken/testapp:all_java"],
)

springboot(
    name = "bankapp_boot",
    boot_app_class = "com.handelsbanken.testapp.Main",
    java_library = "//com/handelsbanken/testapp:all_java",
    # JarLauncher location moved in spring 3.
    boot_launcher_class = 'org.springframework.boot.loader.launch.JarLauncher',
)

sh_test(
    name = "checkout_integration_test",
    data = [
        ":bankapp_boot",
    ],
    srcs = [
        "checkout_integration_test.sh",
    ],
    args = [
        "$(location :bankapp_boot)",
    ],
)
