load("@rules_spring//springboot:springboot.bzl", "springboot")
load("@contrib_rules_jvm//docs:stardoc-input.bzl", "java_test_suite")

java_library(
    name = "all_java",
    srcs = glob(
        include = ["**/*.java"],
        exclude = ["**/*Test.java"],
    ),
    deps = [
        "@rules_spring//springboot/import_bundles:springboot_required_deps",
        "@maven//:com_google_guava_guava",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_webmvc",
    ],
    visibility = ["//visibility:public"],
)

java_test_suite(
    name = "all_java_tests",
    srcs = glob(["**/*Test.java"]),
    runner = "junit5",
    package = "com.handelsbanken.testapp",
    deps = [
        ":all_java",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_springframework_spring_web",
    ],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)

springboot(
    name = "bankapp_boot",
    boot_app_class = "com.handelsbanken.testapp.Main",
    java_library = "//com/handelsbanken/testapp:all_java",
    # JarLauncher location moved in spring 3.
    boot_launcher_class = 'org.springframework.boot.loader.launch.JarLauncher',
)

sh_test(
    name = "checkout_integration_test",
    data = [
        ":bankapp_boot",
    ],
    srcs = [
        "checkout_integration_test.sh",
    ],
    args = [
        "$(location :bankapp_boot)",
    ],
)
